# langchain-basics

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: 1-langchain-intro.ipynb  2-model-integration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structured-output.ipynb  6-middleware.ipynb  7-guardrails.ipynb  langchain-intro.ipynb  model-integration.ipynb
